# string-matching

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bench_time_pat_alphabet_boyer.cpp  bench_time_pat_text.cpp  bench_time_pat_text_karp.cpp  boyer_moore.h  boyer_moore_simple.h  galil_seiferas.h  naive.h  rabin_karp_1.h  rabin_karp_2.h  rabin_karp_3.h  string_matcher.h  test_utils.h  utils.h
bench/: bench_time_pat_alphabet.cpp  bench_time_pat_alphabet_boyer.cpp  bench_time_pat_text.cpp  bench_time_pat_text_karp.cpp
plot/: plot_alpha.py  plot_boyer_diff.py  plot_compare.py  plot_single.py  plot_utils.py  rabin_karp.py
plot/data/alpha/: 16boyer_moore.txt  2boyer_moore.txt  32boyer_moore.txt  4boyer_moore.txt  64boyer_moore.txt  8boyer_moore.txt
plot/data/diff/: 2boyer_moore.txt  2boyer_moore_simple.txt  64boyer_moore.txt  64boyer_moore_simple.txt
plot/data/tpt/: 100000000boyer_moore.txt  100000000galil_seiferas.txt  100000000naive.txt  10000000boyer_moore.txt  10000000galil_seiferas.txt  10000000naive.txt  1000000boyer_moore.txt  1000000galil_seiferas.txt  1000000naive.txt  100000boyer_moore.txt  100000galil_seiferas.txt  100000naive.txt  100000rabin_karp1.txt  100000rabin_karp2.txt  100000rabin_karp3.txt
slides/: Advanced Algorithms Project, A.Y. 2018_2019.pptx
src/: boyer_moore.h  boyer_moore_simple.h  galil_seiferas.h  naive.h  rabin_karp_1.h  rabin_karp_2.h  rabin_karp_3.h  test_utils.h  utils.h
test/: test.cpp
